--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,25 +2,37 @@ body{
     background-image: url("../images/stars.jpeg");
     background-size: cover;
 }
+.orangewords{
+    color: goldenrod;
+}
 h1{ 
     text-align: center;
-    color: goldenrod;
     font-size:54px;
 }
 h2{
     text-align: center;
-    color: goldenrod;
     font-size: 36px;
 }
 #titlepage{
-    margin-top: 200px;
-    
+    margin-top: 200px;    
 }
+.wordCard{
+    border: solid 4px goldenrod;
+    border-radius: 30px;
+    background-color: #000000;
+    width: 20%;
+    margin: auto;
+}
+#charBar{
+    margin: auto;
+    margin-top: 200px;
+}
+  
 #characters{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 40px;
 }
 .charcard{
     border: solid 1px #ffffff;
@@ -29,5 +41,13 @@ h2{
     overflow: hidden;
 }
 img{
-    width: 200px;
+    width: 100%;
+    height: 150px;
+    border: solid 1px goldenrod;
+}
+.title{
+    text-align: center;
+    background-color: #000000;
+    font-size: 20px;
+    height: 100%;
 }
