--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,23 @@
+html{
+    height: auto;
+    min-height: 100%;
+    min-width: 100%;
+}
 body{
     background-image: url("../images/stars.jpeg");
     overflow: hidden;
-    background-size: cover;
+    background-size: auto 100%;
 }
 .orangewords{
     color: goldenrod;
+}
+
+.bluewords{
+    color: #0000ff;
+}
+
+.redwords{
+    color: #ff0000;
 }
 
 h1{ 
@@ -25,6 +38,15 @@ h2{
     width: 20%;
     margin: auto;
 }
+.nowFight{
+    border: solid 4px;
+    border-radius: 30px;
+    background-color: #fefefe;
+    width: 20%;
+    margin: 30px;
+    display: none;
+}
+
 #charBar{
     margin: auto;
     margin-top: 200px;
@@ -52,4 +74,27 @@ img{
     background-color: #000000;
     font-size: 20px;
     height: 100%;
+}
+#fightWindow{
+    display: none;
+}
+
+#charInfo{
+    display: flex;
+    margin: auto;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: baseline;
+}
+
+#fightingAs{
+    width: 15%;
+}
+
+#fightingAgainst{
+    width: 15%;
+}
+
+.vs{
+    width: 5%;
 }
